--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
     </head>
     <body>
         <p>Hello Semua, Saya sedang belajar Git</p>
+        <p>Hello Semua, Saya sedang belajar Git</p>
     </body>
 </html>
